--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -95,6 +95,40 @@
                     android:id="@+id/layoutCurrentBgValueRealTime"
                     android:orientation="horizontal">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <com.eveningoutpost.dexdrip.ui.graphic.CircularProgressBar
+                            android:id="@+id/pbGlucoseLastVal"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:visibility="gone"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="16dp"
+                            app:backgroundColor="@android:color/darker_gray"
+                            app:max="600"
+                            app:progress="0"
+                            app:progressColor="@android:color/holo_green_light"
+                            app:strokeWidth="12dp"
+                            tools:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/tvGlucoseLastTime"
+                            android:layout_width="wrap_content"
+                            android:visibility="gone"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="center"
+                            android:paddingHorizontal="8dp"
+                            android:text="@string/glucoseStartTime"
+                            android:textColor="@android:color/holo_green_light"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            tools:visibility="visible" />
+                    </LinearLayout>
+
                     <TextView
                         android:id="@+id/currentBgValueRealTime"
                         android:layout_width="wrap_content"
@@ -102,21 +136,19 @@
                         android:layout_gravity="right"
                         android:layout_marginBottom="1dp"
                         android:layout_marginTop="-10dp"
-                        android:layout_toStartOf="@+id/trendArrow"
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:gravity="right"
                         android:paddingEnd="20dp"
                         android:paddingTop="0dp"
-                        android:text="13.3"
+                        android:minWidth="104dp"
+                        android:text="130"
                         android:textSize="50sp" />
 
                     <ImageView
                         android:id="@+id/trendArrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentTop="true"
                         android:layout_marginRight="25dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="18dp"
@@ -304,58 +336,18 @@
                     android:layout_toEndOf="@+id/cancelTreatment"
                     android:src="@drawable/ic_touch_app_white_48dp" />
 
-                <com.eveningoutpost.dexdrip.ui.graphic.CircularProgressBar
-                    android:id="@+id/pb_glucoseLastVal"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_alignTop="@id/bloodTestButton"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_toEndOf="@+id/bloodTestButton"
-                    android:visibility="gone"
-                    app:backgroundColor="@android:color/darker_gray"
-                    app:max="600"
-                    app:progress="0"
-                    app:progressColor="@android:color/holo_green_light"
-                    app:strokeWidth="12dp"
-                    tools:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tvGlucoseLastTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/pb_glucoseLastVal"
-                    android:layout_alignStart="@id/pb_glucoseLastVal"
-                    android:gravity="center"
-                    android:text="00:00"
-                    android:textColor="@android:color/holo_green_light"
-                    android:textSize="9sp"
-                    android:visibility="gone"
-                    tools:visibility="visible" />
-
                 <TextView
                     android:id="@+id/textBloodGlucose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/bloodTestButton"
                     android:layout_marginBottom="12dp"
-                    android:layout_toEndOf="@id/pb_glucoseLastVal"
+                    android:layout_toEndOf="@+id/bloodTestButton"
                     android:background="@android:color/transparent"
                     android:text="102 mg/dl"
-                    android:layout_marginStart="4dp"
                     android:textColor="@android:color/holo_green_light"
                     android:textSize="22sp"
                     android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/btnResetGlucoseTimer"
-                    android:layout_width="60dp"
-                    android:layout_height="28dp"
-                    android:layout_below="@id/tvGlucoseLastTime"
-                    android:layout_alignStart="@id/tvGlucoseLastTime"
-                    android:text="reset"
-                    android:textSize="8sp"
-                    android:visibility="gone" />
 
                 <ImageButton
                     android:id="@+id/buttonCarbs"
